# ghostlight

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSING.md  MAINTENANCE.md  PRICING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  build.bat  deny.toml  kickoff.md  llms-install.md  rust-toolchain.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  install.yml
.github/workflows/: ci.yml  pages.yml  release.yml
.oss-adoption/: STATE.md  workspace.json
.oss-adoption/current/: RESULTS.md  channel-research.md  claim-ledger.md  ecosystem-map.md  measurement-plan.md  project-profile.md  publication-plan.md  readiness-audit.md  repository-inventory.json
coordination/: CHAT.md  INSTRUCTIONS.md  RESULTS.md
crates/core/: Cargo.toml
crates/core/src/: b64.rs  constants.rs  lib.rs  messages.rs  recording.rs
crates/core/src/browser/: advertise.rs  directory.rs
crates/core/src/gif/: font.rs  mod.rs  overlay.rs  quantize.rs  writer.rs
crates/core/src/governance/: attention.rs  dispatch.rs  managed.rs  mod.rs  overlay.rs  paths.rs  ports.rs
crates/core/src/governance/audit/: destinations.rs  mod.rs
crates/core/src/governance/config/: mod.rs  presets.rs  reload.rs
crates/core/src/governance/managed/: cache.rs  http.rs  mod.rs
crates/core/src/governance/manifest/: source.rs
crates/core/src/hub/: endpoint.rs  mod.rs  scheduling.rs  session.rs
crates/core/src/hub/inbound/: web.rs
crates/core/src/hub/manage/: doctor.rs  web.rs
crates/core/src/hub/manage/assets/: manage.js
crates/core/src/hub/outbound/: browser.rs  diagnostics.rs  mod.rs  recording.rs  workspace.rs
crates/core/src/install/: clients.rs  handoff.rs  merge.rs  mod.rs  native_host.rs  supervisor.rs  toml_merge.rs
crates/core/src/mcp/: act_on.rs  authority.rs  browser_batch.rs  form_fill.rs  gif_creator.rs  mod.rs  outcome.rs  pipeline.rs  script.rs  server.rs  upload_image.rs  validation.rs
crates/lightbox/: Cargo.toml
crates/lightbox/src/: fake_browser.rs  main.rs  scenarios.rs  support.rs
crates/lightbox/src/legacy/: hub.rs  mod.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs
crates/transport/: Cargo.toml
crates/transport/src/: antisquat.rs  error.rs  handshake.rs  host.rs  instance.rs  ipc.rs  lib.rs  observability.rs  proc.rs  role.rs  supervisor.rs  user_session.rs  watchdog.rs
docs/: COMPARISON.md  DEV-LOOP.md  MEMORY.md  RELEASE.md  SPEC.md  STATUS.md  public-status.json
docs/adr/: 0001-single-binary-thin-extension.md  0002-dual-role-binary-local-ipc.md  0003-tokio-native-ipc.md  0004-reject-second-session.md  0005-policy-free-extension.md  0006-mcp-client-agnostic.md  0007-sacred-tool-surface.md  0008-not-a-port.md  0009-coordinate-model-devicescale.md  0010-coordinate-model-official.md  0011-truthful-engine-redaction.md  0012-ui-and-input-fidelity.md  0013-governance-overlay-all-open.md  0014-v1-scope-exclusions.md  0015-idempotent-merge-installer.md  0016-debug-mode-pinned-extension-id.md  0019-layered-configuration-model.md  0020-org-policy-experience.md  0021-ghostlight-brand-and-family.md  0022-intent-calibrated-capabilities.md  0023-one-loader-for-the-policy-file.md  0024-tool-registry-and-generic-ingest-pipeline.md  0025-manifest-hot-reload.md  0026-release-maturity-and-externalities.md  0027-open-core-business-model-and-licensing.md  0028-tripwire-licensing-and-continuity-promise.md  0029-process-lifecycle-hygiene.md  0030-ghostlight-hub-orchestrator.md  0032-test-at-seams-and-inject-config-sources.md  0045-resilient-reconnecting-adapter.md  0048-development-override.md  0049-mcp-conformance-pass.md  0052-gif-capture-screencast-durable-frames.md  0053-thin-extension-gif-pipeline-in-service.md  0054-zero-elevation-windows-autostart.md  0058-per-browser-identity-and-focus-routing.md  0059-developer-instrumentation-and-live-test-tooling.md  0060-composable-policy-tiers-and-session-overlay.md  0061-extension-owned-browser-identity.md  0062-browser-relay-service-restart-resilience.md  (+20 more)
docs/business/: DISTRIBUTION.md  FOUNDER-TODO.md  PLAN.md  issuing-licenses.md
docs/design/: bounded-delegation-scenario.md  demo-brief.md  ghostlight-service-architecture.md  managed-mode-network-features.md  public-awareness-plan-2026-07.md  public-documentation-review-2026-07.md  tool-visual-signatures.md  visual-feedback-dictionary.html  visual-feedback.md  visual-language-next-2026-07.md  visual-language.md
examples/: demo-policy.json  dev-live-test.json  developer-observe.json  developer-unrestricted.json  enterprise-healthcare.json  qa-staging.json  research-read-only.json
extension/: README.md  agent-visual-indicator.js  content.js  manifest.json  native-messaging-host.json  options.html  options.js  popup.html  popup.js  service-worker.js
local/: README.md
reference/: ANALYSIS.md
scripts/: capture-readme-tour.ps1  check-public-surfaces.ps1  dev-browser.ps1  dev-loop.ps1  gen-icons.py  get-cws-refresh-token.ps1  get.ps1  get.sh  live-demo.ps1  package-extension.ps1  publish-website.ps1  release.ps1  test-e2e.ps1  test-e2e.sh
site/: index.html  install.html
src/: debug.rs  demo.rs  demo_brief.rs  demo_client.rs  doctor.rs  error.rs  instance.rs  lib.rs  main.rs  proc.rs
tests/: act_on.rs  adapter_override.rs  adapter_reconnect.rs  all_open_golden.rs  architecture.rs  audit_recorder.rs  channels_policy.rs  config_schema_golden.rs  console_config_api.rs  hot_reload.rs  hub_completion_criteria.rs  hub_identity.rs  hub_isolation.rs  hub_lifecycle.rs  hub_multiplex.rs  hub_queue.rs  hub_role_wiring.rs  inbound_web_auth.rs  install_instance.rs  install_supervisor.rs  manage_web_config_api.rs  manage_web_enable_remote.rs  manage_web_routes.rs  manage_web_sessions_api.rs  manifest_validation.rs  mcp_protocol.rs  peer_death.rs  policy_explain.rs  policy_init.rs  policy_preset.rs  policy_simulate.rs  script_tool.rs  shadow_mode.rs  tab_control.rs  tool_advertisement.rs  tool_enforcement.rs  tool_schema_fidelity.rs  webapi_auth.rs
(+285 files in other folders)
