[package]
name = "ghostlight"
version = "0.1.0"
edition = "2021"
description = "Governed browser automation over the user's own authenticated Chromium session -- for AI coding agents."
publish = false
# Open-core (ADR-0027): engine is Apache-2.0 OR MIT; src/governance/ is the Ghostlight
# Commercial License. LICENSE at the repo root holds the split notice.
license-file = "LICENSE"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
dirs = "6"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# WHATWG URL parser -- domain matching must never hand-roll URL/host parsing (CVE-2025-47241 class).
url = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
