[package]
name = "ghostlight"
version = "0.5.0"
edition = "2021"
description = "Governed browser automation over the user's own authenticated Chromium session -- for AI coding agents."
publish = false
# Open-core (ADR-0027): engine is Apache-2.0 OR MIT; src/governance/ is the Ghostlight
# Commercial License. LICENSE at the repo root holds the split notice.
license-file = "LICENSE"

# cargo-binstall support: `cargo binstall --git https://github.com/sylin-org/ghostlight ghostlight`
# fetches the prebuilt release archives instead of building from source. Naming matches
# release.yml's Package step: ghostlight-v<version>-<target>.{zip|tar.gz} with the binary
# inside a same-named directory.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[workspace]
members = [".", "crates/transport", "crates/core", "crates/relay"]
resolver = "2"

[dependencies]
ghostlight-core = { path = "crates/core" }
ghostlight-transport = { path = "crates/transport" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "sync", "time", "process"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
anyhow = "1"
# The facade crate + main.rs need only the deps above (main.rs uses clap/anyhow/tokio/tracing).
# Those below are used directly by the integration tests in tests/; they stay in [dependencies]
# because this package declares no [dev-dependencies] section.
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# WHATWG URL parser -- domain matching must never hand-roll URL/host parsing (CVE-2025-47241 class).
url = "2"
