[package]
name = "ghostlight-core"
version = "0.6.0"
edition = "2021"
description = "Ghostlight core: governance, tools, browser protocol, hub composition, and the installer (ADR-0046)."
publish = false
# Open-core (ADR-0027): this crate contains src/governance/, the Ghostlight Commercial License
# module; the root LICENSE holds the split notice.
license-file = "../../LICENSE"

[dependencies]
ghostlight-transport = { path = "../transport" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Lossless TOML editing for Codex's shared config.toml. The installer changes only its own
# [mcp_servers.ghostlight] table and must preserve the user's model, project, and other MCP settings.
toml_edit = "0.23"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
dirs = "6"
sha2 = "0.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# WHATWG URL parser -- domain matching must never hand-roll URL/host parsing (CVE-2025-47241 class).
url = "2"
# gif_creator pipeline (ADR-0053 D5): pure-Rust JPEG decode, the image-rs NeuQuant quantizer, and
# the image-rs GIF encoder (weezl LZW -- the reference implementation; a hand-rolled LZW carried a
# latent width-timing bug at the 4096-code reset that only a strict third-party decoder exposed).
jpeg-decoder = { version = "0.3", default-features = false }
color_quant = "2.0"
gif = { version = "0.14", default-features = false, features = ["std"] }
# Captured browser pixels are ephemeral sensitive data. Zero owned frame buffers when their last
# in-process owner is released (ADR-0073 D4); this is best-effort process hygiene, not an OS-level
# no-swap/no-crash-dump claim.
zeroize = { version = "1", features = ["alloc"] }
# License verification (ADR-0028 Decision 11): composite Ed25519 + ML-DSA-65 (FIPS 204) signature
# over the license claims, verified fully offline against an embedded key table. ML-DSA is the
# post-quantum leg; Ed25519 is the classical guard (AND-composition). Both pure Rust (the four-target
# cross-compile matrix must not grow a C toolchain). base64 is reused from crate::b64 (lean-internals
# posture), so no base64 crate is added here.
ed25519-dalek = "3"
fips204 = "0.4"
# managed:// network fetch (ADR-0055 Phase 3), behind the `managed-fetch` feature: a SMALL blocking
# HTTP client (ureq) plus rustls with a one-root pinned trust store. Optional, so
# `--no-default-features` yields a pure-Rust, no-C, air-gap-only build (local file / USB bundle
# sources still work). Blocking is fine for a periodic poll (runs on a spawn_blocking thread). This
# whole dependency is quarantined behind `governance::managed::fetch_bytes`.
ureq = { version = "2", default-features = false, features = ["tls"], optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "1.0", optional = true }

[features]
# managed:// network fetch (ADR-0055 Phase 3). On by default so the shipped binary can fetch policy
# over the network; `--no-default-features` gives the pure-Rust, no-C, air-gap-only build.
default = ["managed-fetch"]
managed-fetch = ["dep:ureq", "dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots"]
# Gates the offline license-authoring CLI (sign, pubkey). Never enabled in release builds; the
# founder builds with it on the air-gapped machine (ADR-0028 Decision 10).
license-admin = []

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Pipes",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
