[package]
name = "ghostlight-relay"
version = "0.5.0"
edition = "2021"
description = "Ghostlight relay: the single thin pass-through the editor or browser launches, role-selected at launch (ADR-0051 Phase 3, merging the ADR-0046 agent + browser adapters)."
publish = false
license = "Apache-2.0 OR MIT"

[[bin]]
name = "ghostlight-relay"
path = "src/main.rs"

[dependencies]
ghostlight-transport = { path = "../transport" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
