[package]
name = "ghostlight-transport"
version = "0.7.0"
edition = "2021"
description = "Ghostlight transport: the stable substrate shared by the role executables (ADR-0046)."
publish = false
license = "Apache-2.0 OR MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dirs = "6"
sha2 = "0.11"
hmac = "0.13"
getrandom = "0.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
